# soulsformats-rs

./: Cargo.toml
examples/: decompress_dcx.rs
src/: archive.rs  container.rs  game.rs  io.rs  lib.rs
src/archive/: bnd4.rs
src/container/: dcx.rs
src/game/: param.rs
