[package]
name = "souls-types"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
byteorder = "1"
encoding_rs = "0.8"
zerocopy = "0.5"
flate2 = "1"